--- a/projects/messenger/package.json
+++ b/projects/messenger/package.json
@@ -12,5 +12,9 @@
   "workspaces": [
     "chains/evm"
   ],
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@certusone/wormhole-sdk": "^0.3.3",
+    "ethers": "^5.6.6"
+  }
 }
