--- a/projects/messenger/example.xdapp.config.json
+++ b/projects/messenger/example.xdapp.config.json
@@ -19,6 +19,10 @@
       "deployedAddress": "",
       "emittedVAAs": [
       ]
+    }, 
+    "algo": {
+      "type": "algorand",
+      "rpc": ""      
     }
   },
   "wormhole": {
