--- a/projects/evm-messenger/package.json
+++ b/projects/evm-messenger/package.json
@@ -4,7 +4,8 @@
     "description": "A simple template for getting started with xDapps.",
     "main": "starter.js",
     "scripts": {
-      "test": "sh test.sh"
+        "guardiand": "sh wormhole.sh",
+        "cleanup": "npx pm2 kill && docker kill guardiand && docker rm guardiand"
     },
     "keywords": [],
     "author": "",
@@ -12,7 +13,11 @@
     "workspaces": [],
     "type": "module",
     "dependencies": {
-      "@certusone/wormhole-sdk": "^0.3.3"
+        "@certusone/wormhole-sdk": "^0.3.3",
+        "byteify": "^2.0.10",
+        "ethers": "^5.6.9",
+        "ganache": "^7.3.1",
+        "node-fetch": "^3.2.6",
+        "pm2": "^5.2.0"
     }
-  }
-  
+}
