--- a/projects/evm-messenger/package.json
+++ b/projects/evm-messenger/package.json
@@ -5,7 +5,8 @@
     "main": "starter.js",
     "scripts": {
         "guardiand": "sh wormhole.sh",
-        "cleanup": "npx pm2 kill && docker kill guardiand && docker rm guardiand"
+        "cleanup": "npx pm2 kill && docker kill guardiand && docker rm guardiand",
+        "test": "sh tests/evm0-evm1.sh"
     },
     "keywords": [],
     "author": "",
