--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "projects/messenger/chains/evm/lib/forge-std"]
 	path = projects/messenger/chains/evm/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "projects/evm-tokenbridge/chains/evm/lib/openzeppelin-contracts"]
+	path = projects/evm-tokenbridge/chains/evm/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
