--- a/projects/messenger/chains/solana/programs/solana/Cargo.toml
+++ b/projects/messenger/chains/solana/programs/solana/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "solana"
 version = "0.1.0"
-description = "Created with Anchor"
+description = "Cross Chain Messenger App"
 edition = "2021"
 
 [lib]
@@ -17,3 +17,7 @@ default = []
 
 [dependencies]
 anchor-lang = "0.25.0"
+sha3 = "0.10.1"
+byteorder = "1.4.3"
+borsh = "0.9.3"
+hex = "0.4.3"
