--- a/projects/messenger/package.json
+++ b/projects/messenger/package.json
@@ -7,8 +7,12 @@
   "license": "MIT",
   "dependencies": {
     "@certusone/wormhole-sdk": "^0.6.0",
+    "@project-serum/anchor": "^0.25.0",
+    "@types/node-fetch": "^2.6.2",
+    "byteify": "^2.0.10",
     "commander": "^9.4.0",
     "ethers": "^5.6.9",
+    "keccak256": "^1.0.6",
     "node-fetch": "2",
     "ts-node": "^10.9.1"
   },
