--- a/projects/messenger/tsconfig.json
+++ b/projects/messenger/tsconfig.json
@@ -2,5 +2,6 @@
     "compilerOptions": {
         "types": ["node"],
         "moduleResolution": "node",
+        "esModuleInterop": true
     }
 }
