--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "projects/xmint/chains/evm/lib/openzeppelin-contracts"]
 	path = projects/xmint/chains/evm/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "projects/xmint/chains/evm/lib/solidity-bytes-utils"]
+	path = projects/xmint/chains/evm/lib/solidity-bytes-utils
+	url = https://github.com/GNSPS/solidity-bytes-utils
