--- a/projects/xmint/chains/solana/programs/solana/Cargo.toml
+++ b/projects/xmint/chains/solana/programs/solana/Cargo.toml
@@ -17,3 +17,5 @@ default = []
 
 [dependencies]
 anchor-lang = "0.25.0"
+anchor-spl = "0.25.0"
+mpl-token-metadata = {version = "1.3.6", features = ["no-entrypoint"]}
