--- a/projects/xmint/package.json
+++ b/projects/xmint/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@certusone/wormhole-sdk": "^0.6.1",
+    "@metaplex-foundation/mpl-token-metadata": "^2.2.4",
     "@project-serum/anchor": "^0.25.0",
     "@solana/spl-token": "^0.3.1",
     "@types/node": "^18.7.1",
