--- a/projects/xmint/chains/solana/programs/solana/Cargo.toml
+++ b/projects/xmint/chains/solana/programs/solana/Cargo.toml
@@ -19,3 +19,7 @@ default = []
 anchor-lang = "0.25.0"
 anchor-spl = "0.25.0"
 mpl-token-metadata = {version = "1.3.6", features = ["no-entrypoint"]}
+sha3 = "0.10.1"
+byteorder = "1.4.3"
+borsh = "0.9.3"
+primitive-types = { version = "0.11.1", default-features = false }
