--- a/projects/xmint/package.json
+++ b/projects/xmint/package.json
@@ -14,6 +14,7 @@
     "byteify": "^2.0.10",
     "commander": "^9.4.0",
     "ethers": "^5.6.9",
+    "keccak256": "^1.0.6",
     "node-fetch": "2"
   }
 }
