--- a/projects/xmint/chains/solana/programs/solana/Cargo.toml
+++ b/projects/xmint/chains/solana/programs/solana/Cargo.toml
@@ -23,3 +23,4 @@ sha3 = "0.10.1"
 byteorder = "1.4.3"
 borsh = "0.9.3"
 primitive-types = { version = "0.11.1", default-features = false }
+bstr = "0.2.16"
