--- a/projects/messenger/package.json
+++ b/projects/messenger/package.json
@@ -8,15 +8,20 @@
   "dependencies": {
     "@certusone/wormhole-sdk": "^0.6.0",
     "@project-serum/anchor": "^0.25.0",
+    "@solana/web3.js": "^1.64.0",
     "@types/node-fetch": "^2.6.2",
     "byteify": "^2.0.10",
     "commander": "^9.4.0",
     "ethers": "^5.6.9",
     "keccak256": "^1.0.6",
     "node-fetch": "2",
-    "ts-node": "^10.9.1"
+    "relayer-engine": "file:/Users/jh/work/wormhole/relayer-engine/relayer-engine",
+    "relayer-plugin-interface": "file:/Users/jh/work/wormhole/relayer-engine/relayer-plugin-interface",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/node": "^18.6.4"
+    "@types/node": "^18.6.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
