--- a/projects/messenger/tsconfig.json
+++ b/projects/messenger/tsconfig.json
@@ -12,7 +12,7 @@
             "es2019"
         ],
         "skipLibCheck": true,
-        "strict": true,
+        "noImplicitAny": false,
         "declaration": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
