--- a/projects/messenger/package.json
+++ b/projects/messenger/package.json
@@ -15,8 +15,7 @@
     "ethers": "^5.6.9",
     "keccak256": "^1.0.6",
     "node-fetch": "2",
-    "relayer-engine": "file:/Users/jh/work/wormhole/relayer-engine/relayer-engine",
-    "relayer-plugin-interface": "file:/Users/jh/work/wormhole/relayer-engine/relayer-plugin-interface",
+    "relayer-engine": "wormhole-foundation/relayer-engine#relayer-engine-top-package",
     "winston": "^3.8.2"
   },
   "devDependencies": {
