--- a/projects/xid/package.json
+++ b/projects/xid/package.json
@@ -6,6 +6,7 @@
   "author": "spacemandev",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^18.11.0"
+    "@types/node": "^18.11.0",
+    "commander": "^9.4.1"
   }
 }
