added aptos support

--- a/projects/wormhole-local-validator/package.json
+++ b/projects/wormhole-local-validator/package.json
@@ -8,6 +8,7 @@
         "wormhole": "npm run setup && bash wormhole.bash",
         "evm": "npm run setup && bash evm.bash",
         "solana": "npm run setup && bash solana-binary-deploy.bash",
+        "aptos": "npm run setup && bash aptos.bash",
         "cleanup": "npx pm2 kill"
     },
     "keywords": [],
