--- a/projects/wormhole-local-validator/package.json
+++ b/projects/wormhole-local-validator/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "setup": "bash setup.bash",
         "wormhole": "npm run setup && bash wormhole.bash",
+        "spy": "npm run setup && bash spy_guardiand.bash",
         "evm": "npm run setup && bash evm.bash",
         "solana": "npm run setup && bash solana-binary-deploy.bash",
         "aptos": "npm run setup && bash aptos.bash",
